[gd_scene load_steps=18 format=3 uid="uid://bp2jqcx2omu4p"]

[ext_resource type="Script" path="res://resources/enemies/enemy.gd" id="1_k1s64"]
[ext_resource type="Shader" path="res://shaders/hit_flash.gdshader" id="2_n80to"]
[ext_resource type="SpriteFrames" uid="uid://ely82kyxw5ov" path="res://resources/enemies/undead/undead_sprites.tres" id="2_wx37a"]
[ext_resource type="Shape2D" uid="uid://cdr5ad6jnkd1p" path="res://resources/enemies/undead/undead_collision_shape.tres" id="4_rni5g"]
[ext_resource type="Script" path="res://scripts/enemy_animated_sprite_2d.gd" id="4_v3do1"]
[ext_resource type="PackedScene" uid="uid://b5e3dgothl2hh" path="res://scenes/HealthSystem.tscn" id="5_4hnxt"]
[ext_resource type="PackedScene" uid="uid://djlr8l3go4n1t" path="res://scenes/health_bar.tscn" id="6_akvb5"]
[ext_resource type="StyleBox" uid="uid://da27g4e1qgsos" path="res://resources/UI/health_bar_background.tres" id="8_m1nov"]
[ext_resource type="StyleBox" uid="uid://23ibews3ucw1" path="res://resources/UI/health_bar_fill.tres" id="9_5twsh"]
[ext_resource type="Script" path="res://resources/enemies/vision_area.gd" id="10_8ehfa"]
[ext_resource type="Script" path="res://scripts/enemy_health_bar.gd" id="10_hm3ep"]
[ext_resource type="Texture2D" uid="uid://mbc4i6rendfs" path="res://assets/Ui/Emote/emote22.png" id="11_w0n40"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjaa4"]
resource_local_to_scene = true
shader = ExtResource("2_n80to")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_oosqr"]
radius = 31.0

[sub_resource type="Animation" id="Animation_tccyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pm6nl"]
resource_name = "hit"
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.197934),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sesa7"]
_data = {
"RESET": SubResource("Animation_tccyh"),
"hit": SubResource("Animation_pm6nl")
}

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 32
collision_mask = 22
script = ExtResource("1_k1s64")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_gjaa4")
position = Vector2(0, -8)
sprite_frames = ExtResource("2_wx37a")
animation = &"front_idle"
script = ExtResource("4_v3do1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
shape = ExtResource("4_rni5g")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 32

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = ExtResource("4_rni5g")

[node name="HealthSystem" parent="." instance=ExtResource("5_4hnxt")]

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_system", "enemy_audio") instance=ExtResource("6_akvb5")]
offset_top = -23.0
offset_bottom = -19.0
theme_override_styles/background = ExtResource("8_m1nov")
theme_override_styles/fill = ExtResource("9_5twsh")
script = ExtResource("10_hm3ep")
health_system = NodePath("../HealthSystem")
enemy_audio = NodePath("../EnemyAudio")

[node name="EnemyAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="VisionArea2D" type="Area2D" parent="."]
collision_layer = 256
script = ExtResource("10_8ehfa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea2D"]
light_mask = 256
position = Vector2(-5.96046e-08, -7.45013e-09)
rotation = -1.65237
shape = SubResource("CircleShape2D_oosqr")

[node name="EmoteSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, -23)
texture = ExtResource("11_w0n40")

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sesa7")
}
autoplay = "RESET"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="VisionArea2D" to="VisionArea2D" method="_on_body_entered"]
[connection signal="body_exited" from="VisionArea2D" to="VisionArea2D" method="_on_body_exited"]
